--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,40 @@
 version: '3.8'
+
 services:
-  gateway:
-    build: gateway
-    image: gateway_image
-    container_name: gateway_container
+
+  db:
+    image: postgres:13.7-alpine
+    container_name: shareit-db
     ports:
-      - "8080:8080"
-    depends_on:
-      - server
+      - "6541:5432"
     environment:
-      - SHAREIT_SERVER_URL=http://server:9090
+      - POSTGRES_DB=shareit
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
 
   server:
-    build: server
-    image: server_image
-    container_name: server_container
+    build: ./server/
+    image: shareit-server
+    container_name: shareit-server
     ports:
       - "9090:9090"
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - POSTGRES_USER= dmitry
-      - POSTGRES_PASSWORD= password
+      - DB_NAME=shareit
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - DB_HOST=db
+      - DB_PORT=5432
 
-  db:
-    image: postgres:13.7-alpine
-    container_name: shareIt_db
+  gateway:
+    build: ./gateway/
+    image: shareit-gateway
+    container_name: shareit-gateway
     ports:
-      - "6541:5432"
+      - "8080:8080"
+    depends_on:
+      - db
+      - server
     environment:
-      - POSTGRES_DB= shareIt
-      - POSTGRES_USER= dmitry
-      - POSTGRES_PASSWORD= password
+      - SHAREIT_SERVER_URL=http://server:9090
